Curves with no mesh, are still synced to cycles. #52943

Closed
opened 2017-09-29 00:59:21 +02:00 by Carlo Andreacchio · 5 comments

This is more of a feature request rather than a actual bug report.

System Information
Ubuntu 17.04, GTX 1080

Blender Version
Broken: 77dccbf481

Short description of error
Curves with no mesh, are still synced to cycles.

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. f12
  3. note down the time
  4. change to frame 2
  5. f12

In production scenes where there are many curves used (follow path constraint and array along curve use cases are very prevalent), this can effect render times of up to 30-40%.

curves.blend

This is more of a feature request rather than a actual bug report. **System Information** Ubuntu 17.04, GTX 1080 **Blender Version** Broken: 77dccbf4811 **Short description of error** Curves with no mesh, are still synced to cycles. **Exact steps for others to reproduce the error** 1. Open attached blend file 2. f12 3. note down the time 4. change to frame 2 5. f12 In production scenes where there are many curves used (follow path constraint and array along curve use cases are very prevalent), this can effect render times of up to 30-40%. [curves.blend](https://archive.blender.org/developer/F907623/curves.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

This issue was referenced by blender/cycles@2b46819e8c

This issue was referenced by blender/cycles@2b46819e8c256f18b3d10705f3ae72742f6c315b

This issue was referenced by 9298c53e4c

This issue was referenced by 9298c53e4cdb30f8d758ba02556b2fe6410da3a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52943
No description provided.