Fix T52943: don't export curves objects with no faces to Cycles.

Also skip any objects with zero ray visibility and meshes with
zero faces.